# static/swagger.spec.json
@@ -4,10 +4,10 @@
     "version": "1.0.0",
     "description": "GearLaunch v2 Rest Demo Backend"
   },
-  "host": "localhost:8000",
+  "host": "gearlaunch2-backend-rest-demo.herokuapp.com",
   "schemes": [
-    "http",
-    "https"
+    "https",
+    "http"
   ],
   "basePath": "/",
   "components": {
@@ -50,7 +50,7 @@
             "name": "select",
             "in": "query",
             "type": "object",
-            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Countries` with their continent, you can submit this `select`:\n```\n{\n  \"name\": \"\",\n  \"continent_name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$op`.\n\nFor example, if you'd like to get a list of all `Countries` within the continent of `Africa`, you can submit this `select`:\n```\n{\n  \"name\": \"\",\n  \"$where\": {\n    \"continent_name\": {\n      \"$eq\": \"Africa\"\n    }\n  }\n}\n```\n",
+            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Countries` with their continent, you can submit this `select`:\n```\n{\n  \"name\": \"\",\n  \"continent_name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$eq`.\n\nFor example, if you'd like to get a list of all `Countries` within the continent of `Africa`, you can submit this `select`:\n```\n{\n  \"name\": \"\",\n  \"$where\": {\n    \"continent_name\": {\n      \"$eq\": \"Africa\"\n    }\n  }\n}\n```\n",
             "default": {
               "code": "",
               "name": ""
@@ -89,7 +89,7 @@
             "name": "select",
             "in": "query",
             "type": "object",
-            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Merchants`, you can submit this `select`:\n```\n{\n  \"merchant_name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$op`.\n\nFor example, if you'd like to get a list of all `Merchants` within the continent of `Africa`, you can submit this `select`:\n```\n{\n  \"merchant_name\": \"\",\n  \"country\": {\n    \"name\": \"\",\n    \"continent_name\": \"\",\n    \"$where\": {\n      \"continent_name\": {\n        \"$eq\": \"Africa\"\n      }\n    }\n  }\n}\n```\n",
+            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Merchants`, you can submit this `select`:\n```\n{\n  \"merchant_name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$eq`.\n\nFor example, if you'd like to get a list of all `Merchants` within the continent of `Africa`, you can submit this `select`:\n```\n{\n  \"merchant_name\": \"\",\n  \"country\": {\n    \"name\": \"\",\n    \"continent_name\": \"\",\n    \"$where\": {\n      \"continent_name\": {\n        \"$eq\": \"Africa\"\n      }\n    }\n  }\n}\n```\n",
             "default": {
               "merchant_name": ""
             }
@@ -127,7 +127,7 @@
             "name": "select",
             "in": "query",
             "type": "object",
-            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `OrderItems`, you can submit this `select`:\n```\n{\n  \"quantity\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$op`.\n\nFor example, if you'd like to get a list of all `OrderItems` that are `in_progress` for all buyer `Users` in Africa, you can submit this `select`:\n```\n{\n  \"quantity\": \"\",\n  \"product\": {\n    \"name\": \"\"\n  },\n  \"order\": {\n    \"status\": \"\",\n    \"$where\": {\n      \"status\": {\n        \"$eq\": \"in_progress\"\n      }\n    },\n    \"user\": {\n      \"full_name\": \"\",\n      \"country\": {\n        \"name\": \"\",\n        \"continent_name\": \"\",\n        \"$where\": {\n          \"continent_name\": {\n            \"$eq\": \"Africa\"\n          }\n        }\n      }\n    }\n  }\n}\n```\n",
+            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `OrderItems`, you can submit this `select`:\n```\n{\n  \"quantity\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$eq`.\n\nFor example, if you'd like to get a list of all `OrderItems` that are `in_progress` for all buyer `Users` in Africa, you can submit this `select`:\n```\n{\n  \"quantity\": \"\",\n  \"product\": {\n    \"name\": \"\"\n  },\n  \"order\": {\n    \"status\": \"\",\n    \"$where\": {\n      \"status\": {\n        \"$eq\": \"in_progress\"\n      }\n    },\n    \"user\": {\n      \"full_name\": \"\",\n      \"country\": {\n        \"name\": \"\",\n        \"continent_name\": \"\",\n        \"$where\": {\n          \"continent_name\": {\n            \"$eq\": \"Africa\"\n          }\n        }\n      }\n    }\n  }\n}\n```\n",
             "default": {
               "quantity": ""
             }
@@ -165,7 +165,7 @@
             "name": "select",
             "in": "query",
             "type": "object",
-            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Orders`, you can submit this `select`:\n```\n{\n  \"status\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$op`.\n\nFor example, if you'd like to get a list of all `Orders` with status `in_progress` that were bought by `Users` from Africa, you can submit this `select`:\n```\n{\n  \"status\": \"\",\n  \"$where\": {\n    \"status\": {\n      \"$eq\": \"in_progress\"\n    }\n  },\n  \"user\": {\n    \"full_name\": \"\",\n    \"country\": {\n      \"name\": \"\",\n      \"continent_name\": \"\",\n      \"$where\": {\n        \"continent_name\": {\n          \"$eq\": \"Africa\"\n        }\n      }\n    }\n  }\n}\n```\n",
+            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Orders`, you can submit this `select`:\n```\n{\n  \"status\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$eq`.\n\nFor example, if you'd like to get a list of all `Orders` with status `in_progress` that were bought by `Users` from Africa, you can submit this `select`:\n```\n{\n  \"status\": \"\",\n  \"$where\": {\n    \"status\": {\n      \"$eq\": \"in_progress\"\n    }\n  },\n  \"user\": {\n    \"full_name\": \"\",\n    \"country\": {\n      \"name\": \"\",\n      \"continent_name\": \"\",\n      \"$where\": {\n        \"continent_name\": {\n          \"$eq\": \"Africa\"\n        }\n      }\n    }\n  }\n}\n```\n",
             "default": {
               "status": ""
             }
@@ -203,7 +203,7 @@
             "name": "select",
             "in": "query",
             "type": "object",
-            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Products`, you can submit this `select`:\n```\n{\n  \"name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$op`.\n\nFor example, if you'd like to get a list of all `Products` with status `in_stock` that were created by `Merchants` from Africa, you can submit this `select`:\n```\n{\n  \"name\": \"\",\n  \"status\": \"\",\n  \"$where\": {\n    \"status\": {\n      \"$eq\": \"in_stock\"\n    }\n  },\n  \"merchant\": {\n    \"merchant_name\": \"\",\n    \"country\": {\n      \"name\": \"\",\n      \"continent_name\": \"\",\n      \"$where\": {\n        \"continent_name\": {\n          \"$eq\": \"Africa\"\n        }\n      }\n    }\n  }\n}\n```\n",
+            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Products`, you can submit this `select`:\n```\n{\n  \"name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$eq`.\n\nFor example, if you'd like to get a list of all `Products` with status `in_stock` that were created by `Merchants` from Africa, you can submit this `select`:\n```\n{\n  \"name\": \"\",\n  \"status\": \"\",\n  \"$where\": {\n    \"status\": {\n      \"$eq\": \"in_stock\"\n    }\n  },\n  \"merchant\": {\n    \"merchant_name\": \"\",\n    \"country\": {\n      \"name\": \"\",\n      \"continent_name\": \"\",\n      \"$where\": {\n        \"continent_name\": {\n          \"$eq\": \"Africa\"\n        }\n      }\n    }\n  }\n}\n```\n",
             "default": {
               "name": ""
             }
@@ -338,7 +338,7 @@
             "name": "select",
             "in": "query",
             "type": "object",
-            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Users` with their full name, you can submit this `select`:\n```\n{\n  \"full_name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$op`.\n\nFor example, if you'd like to get a list of all `Users` within the continent of `Africa`, you can submit this `select`:\n```\n{\n  \"full_name\": \"\",\n  \"country\": {\n    \"name\": \"\",\n    \"continent_name\": \"\",\n    \"$where\": {\n      \"continent_name\": {\n        \"$eq\": \"Africa\"\n      }\n    }\n  }\n}\n```\n",
+            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get a list of all `Users` with their full name, you can submit this `select`:\n```\n{\n  \"full_name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$eq`.\n\nFor example, if you'd like to get a list of all `Users` within the continent of `Africa`, you can submit this `select`:\n```\n{\n  \"full_name\": \"\",\n  \"country\": {\n    \"name\": \"\",\n    \"continent_name\": \"\",\n    \"$where\": {\n      \"continent_name\": {\n        \"$eq\": \"Africa\"\n      }\n    }\n  }\n}\n```\n",
             "default": {
               "full_name": ""
             }
@@ -379,7 +379,7 @@
             "name": "select",
             "in": "query",
             "type": "object",
-            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get the `User` full name, you can submit this `select`:\n```\n{\n  \"full_name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$op`.\n\nFor example, if you'd like to get a list of all `Products` a specific `User` bought around Christmas, you can submit this `select`:\n```\n{\n  \"full_name\": \"\",\n  \"orders\": {\n    \"created_at\": \"\",\n    \"$where\": {\n      \"created_at\": {\n        \"$and\": [\n          {\"$gt\": \"2019-12-10T00:00:00.000Z\"},\n          {\"$lt\": \"2019-12-27T00:00:00.000Z\"}\n        ]\n      }\n    },\n    \"order_items\": {\n      \"quantity\": \"\",\n      \"product\": {\n        \"name\": \"\"\n      }\n    }\n  }\n}\n```\n",
+            "description": "The `select` query object is used to point what data the API need to return.\nAdding a property to the `select` object will return the corresponding data.\n\nFor example, if you'd like to get the `User` full name, you can submit this `select`:\n```\n{\n  \"full_name\": \"\"\n}\n```\n\nFiltration is also supported with the special key of `\"$where\" :{}`. The `$where` object supports all comparison operators\nfrom Sequelize ORM https://sequelize.org/master/manual/model-querying-basics.html#operators. Please note that operations are prefixed, e.g. instead of `Op.eq` => `$eq`.\n\nFor example, if you'd like to get a list of all `Products` a specific `User` bought around Christmas, you can submit this `select`:\n```\n{\n  \"full_name\": \"\",\n  \"orders\": {\n    \"created_at\": \"\",\n    \"$where\": {\n      \"created_at\": {\n        \"$and\": [\n          {\"$gt\": \"2019-12-10T00:00:00.000Z\"},\n          {\"$lt\": \"2019-12-27T00:00:00.000Z\"}\n        ]\n      }\n    },\n    \"order_items\": {\n      \"quantity\": \"\",\n      \"product\": {\n        \"name\": \"\"\n      }\n    }\n  }\n}\n```\n",
             "default": {
               "full_name": ""
             }
